WIP/manifests/contour-gateway/gateway.yaml
---
# https://gateway-api.sigs.k8s.io/api-types/gatewayclass/#gatewayclass-parameters

kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: gateway
spec:
  controllerName: projectcontour.io/gateway-controller
  parametersRef:
    kind: ContourDeployment
    group: projectcontour.io
    name: contour-envoy
    namespace: projectcontour

---
# https://gateway-api.sigs.k8s.io/api-types/gateway/

kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: contour
  namespace: projectcontour
spec:
  gatewayClassName: gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      hostname: "*.saltlabs.cloud"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: "*.saltlabs.cloud"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: ingress-tls
            namespace: projectcontour
